test/errors/variable_no_definida.mg
% EXPECT: variable no definida: x
display_size 5 5
polyline { 0 0  x 1 }
